--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ctms-dashboard",
   "version": "0.1.0",
+  "homepage": "https://rorkien.github.io/INF-0300-2022",
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^4.0.2",
@@ -20,10 +21,13 @@
     "@typescript-eslint/eslint-plugin": "^5.9.0",
     "@typescript-eslint/parser": "^5.9.0",
     "eslint": "^8.6.0",
+    "gh-pages": "^3.2.3",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2"
   },
   "scripts": {
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
